pseudonymize design tokens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
   height: 100dvh;
   color: var(--symbolColor-main);
   font-family: var(--pdz-font-regular);
-  background-color: var(--pdz-surface);
+  background-color: var(--pdz-color-surface);
 }
 
 main {
