--- a/src/app/drafts/matchup-overview/matchup/coveragechart/coveragechart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/coveragechart/coveragechart.component.scss
@@ -9,6 +9,6 @@
 }
 
 coverage {
-  border: 1px solid var(--pdz-primary-border);
+  border: 1px solid var(--pdz-color-primary-border);
   border-radius: 1rem;
 }
