--- a/src/app/league-zone/league-trades/league-trades.component.scss
+++ b/src/app/league-zone/league-trades/league-trades.component.scss
@@ -8,7 +8,7 @@
   }
 
   .stage-body {
-    border-left: 2px solid var(--pdz-primary);
+    border-left: 2px solid var(--pdz-color-primary);
     padding: 1rem 0 1rem 1rem;
     display: flex;
     flex-direction: column;
