--- a/src/app/league-zone/league.scss
+++ b/src/app/league-zone/league.scss
@@ -10,7 +10,7 @@
   }
 
   .draft-section-body {
-    border: 1px solid var(--pdz-primary-border);
+    border: 1px solid var(--pdz-color-primary-border);
     border-radius: 0.5rem;
   }
 }
@@ -27,7 +27,7 @@
   }
 
   .league-section-body {
-    border: 1px solid var(--pdz-primary-border);
+    border: 1px solid var(--pdz-color-primary-border);
     border-radius: 0.5rem;
   }
 }
