--- a/src/app/league-zone/league/league.component.scss
+++ b/src/app/league-zone/league/league.component.scss
@@ -7,8 +7,8 @@
   .widget-title {
     padding: 0.25rem;
     font-family: var(--pdz-font-fancy);
-    background-color: var(--pdz-primary);
-    color: var(--pdz-on-primary);
+    background-color: var(--pdz-color-primary);
+    color: var(--pdz-color-on-primary);
     text-align: center;
   }
 
