--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,23 +1,17 @@
 <div class="homepage-main">
   <div class="hero-section">
     <div class="title-container">
-      <logo-small-svg class="title-logo" />
-      <div>
-        <span class="title-text"> POKEMON </span>
-        <span class="title-text alternate"> DRAFTZONE </span>
-      </div>
+      <span class="title-text"> POKEMON </span>
+      <pdz-icon name="logo-small" class="title-logo"></pdz-icon>
+      <span class="title-text alternate"> DRAFTZONE </span>
     </div>
     <p class="subtitle">
       Your ultimate destination for Pokémon drafting and league management.
     </p>
-    <!-- <div class="cta-buttons">
-      <a class="cta-button btn btn-secondary" routerLink="/leagues"
-        >Find a League</a
-      >
-      <a class="cta-button btn btn-secondary" routerLink="/drafts"
-        >Start Drafting</a
-      >
-    </div> -->
+    <div class="cta-buttons">
+      <a class="cta-button btn btn-primary" routerLink="/">Button Style 1</a>
+      <a class="cta-button btn btn-secondary" routerLink="/">Button Style 2 </a>
+    </div>
   </div>
 
   <div class="info-container">
