--- a/src/app/util/tooltip/tooltip.component.scss
+++ b/src/app/util/tooltip/tooltip.component.scss
@@ -5,8 +5,8 @@
 
 .tooltip {
   position: fixed;
-  background: var(--pdz-surface);
-  color: var(--pdz-on-surface);
+  background: var(--pdz-color-surface);
+  color: var(--pdz-color-on-surface);
   padding: 8px;
   border-radius: 8px;
   font-size: 14px;
