--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,9 +1,9 @@
-$primary-color: var(--pdz-primary);
-$primary-hover-color: var(--pdz-secondary);
-$border-color: var(--pdz-primary-border-variant);
-$text-color: var(--pdz-on-surface);
-$timestamp-color: var(--pdz-primary);
-$background-color: var(--pdz-surface);
+$primary-color: var(--pdz-color-primary);
+$primary-hover-color: var(--pdz-color-secondary);
+$border-color: var(--pdz-color-primary-border-variant);
+$text-color: var(--pdz-color-on-surface);
+$timestamp-color: var(--pdz-color-primary);
+$background-color: var(--pdz-color-surface);
 .message-list {
   min-height: 4rem;
   max-height: 20rem;
