--- a/src/app/drafts/matchup-overview/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup.scss
@@ -8,7 +8,7 @@
     width: 100%;
 
     padding: 0 1rem 0.5rem;
-    color: var(--pdz-primary);
+    color: var(--pdz-color-primary);
     font-weight: 700;
     .widget-label {
       font-size: 1.2em;
@@ -32,9 +32,9 @@
 .matchup-main {
   background: linear-gradient(
     to right,
-    var(--pdz-primary-container),
-    var(--pdz-surface),
-    var(--pdz-secondary-container)
+    var(--pdz-color-primary-container),
+    var(--pdz-color-surface),
+    var(--pdz-color-secondary-container)
   );
   height: 100%;
   overflow-y: auto;
@@ -60,7 +60,7 @@
         justify-content: space-evenly;
         column-gap: 2rem;
         row-gap: 0.125rem;
-        background-color: var(--pdz-surface);
+        background-color: var(--pdz-color-surface);
         box-shadow: var(--pdz-level-2);
       }
     }
@@ -78,12 +78,12 @@
     font-weight: 700;
     font-size: 0.8em;
     height: 1rem;
-    color: var(--pdz-secondary);
+    color: var(--pdz-color-secondary);
   }
   .detail-text {
     font-weight: 700;
     font-size: 1em;
-    color: var(--pdz-on-surface);
+    color: var(--pdz-color-on-surface);
   }
 }
 
@@ -99,7 +99,7 @@
   .shared-container {
     max-width: 50rem;
     width: 100%;
-    background-color: var(--pdz-surface);
+    background-color: var(--pdz-color-surface);
     box-shadow: var(--pdz-level-4);
     border-radius: 1rem;
     padding: 1rem;
@@ -127,7 +127,7 @@
       flex-direction: column;
       row-gap: 1rem;
       .url-container {
-        border: 1px solid var(--pdz-primary-border);
+        border: 1px solid var(--pdz-color-primary-border);
         border-radius: 1rem;
         padding: 0 0.5rem;
 
@@ -145,20 +145,20 @@
         }
       }
       .matchup-preview-container {
-        border: 1px solid var(--pdz-primary-border);
+        border: 1px solid var(--pdz-color-primary-border);
         border-radius: 1rem;
         padding: 0 1rem;
         .details-container {
           display: flex;
           flex-wrap: wrap;
           justify-content: space-evenly;
-          border-bottom: 1px solid var(--pdz-primary-border-variant);
+          border-bottom: 1px solid var(--pdz-color-primary-border-variant);
         }
         .teams-container {
           display: flex;
           padding: 0.25rem 0;
           > :not(:last-child) {
-            border-right: 1px solid var(--pdz-primary-border-variant);
+            border-right: 1px solid var(--pdz-color-primary-border-variant);
           }
           .team-container {
             width: 50%;
@@ -193,8 +193,8 @@
                   position: absolute;
                   top: 0;
                   right: 0;
-                  background-color: var(--pdz-secondary);
-                  color: var(--pdz-on-secondary);
+                  background-color: var(--pdz-color-secondary);
+                  color: var(--pdz-color-on-secondary);
                   box-shadow: var(--pdz-level-2);
 
                   border-radius: 1rem;
@@ -213,11 +213,11 @@
                   position: absolute;
                   bottom: 0;
                   font-weight: 600;
-                  background-color: var(--pdz-surface);
+                  background-color: var(--pdz-color-surface);
                   box-shadow: var(--pdz-level-2);
                   padding: 0 0.125rem;
                   border-radius: 1rem;
-                  color: var(--pdz-secondary);
+                  color: var(--pdz-color-secondary);
                   @media (max-width: 768px) {
                     font-size: 0.7em;
                     line-height: 0.7em;
