--- a/src/app/drafts/opponent-overview/opponent-overview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-overview.component.scss
@@ -5,11 +5,11 @@
   padding: 0 0.5rem;
   gap: 0.5rem;
 
-  border-bottom: 1px solid var(--pdz-primary-border);
-  border-top: 1px solid var(--pdz-primary-border);
+  border-bottom: 1px solid var(--pdz-color-primary-border);
+  border-top: 1px solid var(--pdz-color-primary-border);
 
   margin-bottom: 0.5rem;
-  background-color: var(--pdz-surface);
+  background-color: var(--pdz-color-surface);
   box-shadow: var(--pdz-level-2);
 }
 
@@ -22,7 +22,7 @@
   padding: 0 0.5rem;
   flex-shrink: 0;
   padding-left: 1rem;
-  border-left: 2px solid var(--pdz-primary-border);
+  border-left: 2px solid var(--pdz-color-primary-border);
 }
 
 h2 {
