--- a/src/app/league-zone/league-schedule-matchup/league-schedule-matchup.component.scss
+++ b/src/app/league-zone/league-schedule-matchup/league-schedule-matchup.component.scss
@@ -5,7 +5,7 @@
 .matchup-card {
   display: flex;
   flex-direction: column;
-  background-color: var(--pdz-surface);
+  background-color: var(--pdz-color-surface);
   box-shadow: var(--pdz-level2);
   width: 26rem;
   border-radius: 2rem;
@@ -35,7 +35,7 @@
       border-width: 2px;
       flex-shrink: 0;
       overflow: hidden;
-      border-color: var(--pdz-primary-border-variant);
+      border-color: var(--pdz-color-primary-border-variant);
       box-shadow: var(--pdz-level1);
       &.positive {
         border-color: lightgreen;
@@ -80,7 +80,7 @@
       bottom: -0.75rem;
       left: 50%;
       transform: translate(-50%, 0);
-      color: var(--pdz-surface-container-highest);
+      color: var(--pdz-color-surface-container-highest);
     }
   }
 
@@ -89,14 +89,14 @@
     top: -0.375rem;
     left: 50%;
     transform: translate(-50%, 0);
-    color: var(--pdz-primary);
+    color: var(--pdz-color-primary);
     padding: 0 0.25rem;
     border-radius: 0.5rem;
     font-size: 0.6em;
     &.enabled {
       box-shadow: var(--pdz-level1);
-      background-color: var(--pdz-primary);
-      color: var(--pdz-on-primary);
+      background-color: var(--pdz-color-primary);
+      color: var(--pdz-color-on-primary);
     }
     &:active {
       margin-top: 1px;
@@ -129,7 +129,7 @@
         border-radius: 0.25rem;
         box-shadow: var(--pdz-level1);
         background-color: white;
-        color: var(--pdz-primary);
+        color: var(--pdz-color-primary);
         &.positive {
           color: lightgreen;
         }
@@ -159,7 +159,7 @@
     row-gap: 0.25rem;
     .match-option {
       font-size: 0.6em;
-      color: var(--pdz-primary);
+      color: var(--pdz-color-primary);
       display: flex;
       column-gap: 0.25rem;
       align-items: center;
@@ -176,14 +176,14 @@
         }
       }
       .match-button {
-        border: 1px solid var(--pdz-primary-border-variant);
+        border: 1px solid var(--pdz-color-primary-border-variant);
         padding: 0.0675rem 0.125rem;
         box-shadow: var(--pdz-level1);
         border-radius: 0.5rem;
         &.selected {
-          background-color: var(--pdz-primary);
-          border: 1px solid var(--pdz-primary);
-          color: var(--pdz-on-primary);
+          background-color: var(--pdz-color-primary);
+          border: 1px solid var(--pdz-color-primary);
+          color: var(--pdz-color-on-primary);
           margin-top: 1px;
           margin-bottom: -1px;
           box-shadow: var(--pdz-level0);
@@ -207,7 +207,7 @@
       border-radius: 0.5rem;
       width: 3rem;
       border-width: 2px;
-      border-color: var(--pdz-primary-border-variant);
+      border-color: var(--pdz-color-primary-border-variant);
       sprite {
         filter: grayscale(100%);
       }
