--- a/src/app/league-zone/league-sign-up/league-sign-up.component.scss
+++ b/src/app/league-zone/league-sign-up/league-sign-up.component.scss
@@ -4,7 +4,7 @@ textarea {
   resize: none;
 }
 
-$form-color: var(--pdz-surface-container);
+$form-color: var(--pdz-color-surface-container);
 .sign-up {
   margin-left: auto;
   margin-right: auto;
