--- a/src/app/league-zone/league-tier-list/league-tier-list-form/tier-group-edit-dialog/tier-group-edit-dialog.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/tier-group-edit-dialog/tier-group-edit-dialog.component.scss
@@ -5,7 +5,7 @@ h2 {
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 1.2em;
-  border-bottom: 1px solid var(--pdz-primary-border-variant);
+  border-bottom: 1px solid var(--pdz-color-primary-border-variant);
   padding-bottom: 8px;
 }
 
@@ -28,7 +28,7 @@ h2 {
     (
       subhead-weight: 700,
       subhead-font: var(--pdz-font-fancy),
-      subhead-color: var(--pdz-primary),
+      subhead-color: var(--pdz-color-primary),
       subhead-size: 1.2em,
     )
   );
