--- a/src/app/planner/summary/summary.component.scss
+++ b/src/app/planner/summary/summary.component.scss
@@ -13,6 +13,6 @@
   width: fit-content;
   height: fit-content;
   border-radius: 1rem;
-  background-color: var(--pdz-surface);
+  background-color: var(--pdz-color-surface);
   box-shadow: var(--pdz-level-3);
 }
