--- a/src/app/tools/quick-draft copy/quick-draft-final/quick-draft-final.component.scss
+++ b/src/app/tools/quick-draft copy/quick-draft-final/quick-draft-final.component.scss
@@ -1,5 +1,5 @@
 .draft-container-wrapper {
-  border: 2px solid var(--pdz-primary-border-variant);
+  border: 2px solid var(--pdz-color-primary-border-variant);
   height: 100%;
   width: 100%;
   max-height: 100%;
@@ -34,7 +34,7 @@
 }
 
 h2 {
-  color: var(--pdz-primary);
+  color: var(--pdz-color-primary);
 }
 
 :host {
