--- a/src/app/tools/quick-draft/quick-draft.component.scss
+++ b/src/app/tools/quick-draft/quick-draft.component.scss
@@ -43,17 +43,17 @@ h3 {
 .qd-option {
   box-shadow: var(--pdz-level-2);
   border-radius: 1rem;
-  border: 2px solid var(--pdz-primary-border-variant);
+  border: 2px solid var(--pdz-color-primary-border-variant);
   margin: 4px;
   &.selected {
-    border: 6px solid var(--pdz-primary-border);
-    background-color: var(--pdz-surface);
-    color: var(--pdz-on-primary-container);
+    border: 6px solid var(--pdz-color-primary-border);
+    background-color: var(--pdz-color-surface);
+    color: var(--pdz-color-on-primary-container);
     margin: 0px;
   }
 
   &:not(.selected):hover {
-    border: 2px solid var(--pdz-primary-border);
+    border: 2px solid var(--pdz-color-primary-border);
   }
 }
 
@@ -74,7 +74,7 @@ h3 {
   font-size: 0.8em;
   font-weight: 800;
   font-family: var(--pdz-font-regular);
-  color: var(--pdz-primary);
+  color: var(--pdz-color-primary);
 }
 
 .qd-spacer {
