--- a/src/app/util/forms/team-form/team-form.component.scss
+++ b/src/app/util/forms/team-form/team-form.component.scss
@@ -5,7 +5,7 @@
 
   cdk-accordion {
     display: block;
-    border: 1px solid var(--pdz-primary-border);
+    border: 1px solid var(--pdz-color-primary-border);
     border-radius: 0.5rem;
     overflow: hidden;
 
@@ -14,7 +14,7 @@
       overflow: hidden;
 
       &:not(:last-child) {
-        border-bottom: 1px solid var(--pdz-primary-border-variant);
+        border-bottom: 1px solid var(--pdz-color-primary-border-variant);
       }
 
       &:last-child {
@@ -45,9 +45,9 @@
         }
 
         mat-icon {
-          color: var(--pdz-on-surface-variant);
+          color: var(--pdz-color-on-surface-variant);
           &.preview-warning {
-            color: var(--pdz-error);
+            color: var(--pdz-color-error);
             width: 4rem;
             height: 3rem;
             font-size: 3rem;
@@ -85,7 +85,7 @@
               max-height: 2rem;
               display: flex;
               align-items: center;
-              fill: var(--pdz-on-surface-variant);
+              fill: var(--pdz-color-on-surface-variant);
             }
           }
         }
@@ -234,16 +234,16 @@
   .captain-subcontainer {
     padding: 2px;
     &:not(:first-child) {
-      border-left: 1px solid var(--pdz-primary-border-variant);
+      border-left: 1px solid var(--pdz-color-primary-border-variant);
     }
     .allnone-bar {
       display: flex;
       justify-content: center;
       .allnone-container {
-        color: var(--pdz-on-primary);
+        color: var(--pdz-color-on-primary);
         font-weight: 600;
-        border: 2px solid var(--pdz-primary);
-        background-color: var(--pdz-primary);
+        border: 2px solid var(--pdz-color-primary);
+        background-color: var(--pdz-color-primary);
         height: 1.5rem;
         display: flex;
         align-items: center;
@@ -262,13 +262,13 @@
         .allnone {
           width: 3rem;
           height: 100%;
-          background-color: var(--pdz-primary);
-          color: var(--pdz-on-primary);
+          background-color: var(--pdz-color-primary);
+          color: var(--pdz-color-on-primary);
           border-radius: 4rem;
           &:hover,
           &:disabled {
-            background-color: var(--pdz-surface);
-            color: var(--pdz-on-surface-variant);
+            background-color: var(--pdz-color-surface);
+            color: var(--pdz-color-on-surface-variant);
           }
         }
       }
@@ -310,7 +310,7 @@
     margin-left: 0.5rem;
   }
   .capt-button {
-    color: var(--pdz-on-surface-variant);
+    color: var(--pdz-color-on-surface-variant);
   }
   div {
     display: flex;
@@ -338,7 +338,7 @@
 }
 
 mat-tab-group {
-  background-color: var(--pdz-surface-variant);
+  background-color: var(--pdz-color-surface-variant);
 
   .tab-icon-wrapper {
     margin-left: 0.25rem;
@@ -355,12 +355,12 @@ mat-tab-group {
 .main-container {
   @include mat.tabs-overrides(
     (
-      divider-color: var(--pdz-primary-border-variant),
+      divider-color: var(--pdz-color-primary-border-variant),
     )
   );
   @include mat.divider-overrides(
     (
-      color: var(--pdz-primary-border-variant),
+      color: var(--pdz-color-primary-border-variant),
     )
   );
 }
