--- a/src/app/util/matchup/typechart/typechart-core.component.scss
+++ b/src/app/util/matchup/typechart/typechart-core.component.scss
@@ -21,7 +21,7 @@
   }
   &.type-empty {
     color: transparent;
-    background-color: var(--pdz-surface-variant);
+    background-color: var(--pdz-color-surface-variant);
   }
 }
 
@@ -90,13 +90,13 @@ th {
 
 //Hover lines
 .column-hovered {
-  background-color: var(--pdz-primary-border-variant);
+  background-color: var(--pdz-color-primary-border-variant);
 }
 
 tbody {
   tr {
     &:hover {
-      background-color: var(--pdz-primary-border-variant);
+      background-color: var(--pdz-color-primary-border-variant);
       td:not(.column-hovered),
       th:not(.column-hovered) {
         &:first-child {
@@ -161,7 +161,7 @@ tbody {
 }
 
 .sprite-wrapper {
-  background-color: var(--pdz-surface);
+  background-color: var(--pdz-color-surface);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -193,6 +193,6 @@ tbody {
 }
 
 .stat-neutral {
-  background-color: var(--pdz-secondary-container);
-  color: var(--pdz-on-secondary-container);
+  background-color: var(--pdz-color-secondary-container);
+  color: var(--pdz-color-on-secondary-container);
 }
